--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Karla:wght@700&display=swap");
+
 #sidebar:checked ~ .card-body {
   visibility: visible;
+}
+
+.intro {
+  height: 6000px;
+  font-family: "Karla", sans-serif;
+  align-items: center;
+}
+
+.intro > h1 {
+  color: white;
+  text-align: center;
+  margin: auto;
+  opacity: 0;
+  transition: all 2s;
 }
